Notify css corrected to avoid overlap

--- a/tapjoyads/public/stylesheets/sass/marketplace/theme/tjm/style.scss
+++ b/tapjoyads/public/stylesheets/sass/marketplace/theme/tjm/style.scss
@@ -1269,6 +1269,7 @@ div.ui-joy-button .get-app {
  * notifications
  */
 .ui-notification {
+  @extend .border-box;
   position: absolute;
   top: 40px;
   text-align: center;
